# terminal-translator

./: .env  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  tutorial.md
docs/api/: main.md
docs/templates/: installation.md
src/: config.py  main.py
src/terminal-translator/: config.py  main.py
src/terminal_translator/: config.py  main.py  version.py
