[tool.poetry]
name = "terminal-translator"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "terminal-translator", from = "src"}]

[tool.poetry.scripts]
tt = "src.main:app"
tt-configure = "src.config:app_config"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-translate = "^3.11.0"
dynaconf = "^3.1.12"
toml = "^0.10.2"
typer = "^0.7.0"
rich = "^13.3.2"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.259"
pip-audit = "^2.5.3"
taskipy = "^1.10.4"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings-python = "^0.8.3"
mkdocs-pymdownx-material-extras = "^2.4.2"
mkdocs-macros-plugin = "^0.7.0"
jinja2 = "^3.1.2"
mkdocstrings = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = { cmd = "ruff src", help = "Performs a static analysis of the source code"}
format = { cmd = "isort src && black src", help = "Formats the source code of the project, following PEP 8 standards" }
security = { cmd = "pip-audit", help = "Performs a security analysis of the libraries used" }

